# XeryonEtherCAT

./: .gitignore  README.md  XeryonEtherCAT.sln  docker-compose.yml
XeryonEtherCAT.App/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  XeryonEtherCAT.App.csproj  app.manifest
XeryonEtherCAT.App/Commands/: AsyncCommand.cs  AsyncRelayCommand.cs  RelayCommand.cs
XeryonEtherCAT.App/Logging/: RelayLoggerProvider.cs
XeryonEtherCAT.App/Services/: LogConsoleService.cs
XeryonEtherCAT.App/ViewModels/: AxisViewModel.cs  DriveEventViewModel.cs  DriveStatusViewModel.cs  LogEntryViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
XeryonEtherCAT.App/Views/: AxisControl.axaml  AxisControl.axaml.cs
XeryonEtherCAT.ConsoleHarness/: ConsoleWriter.cs  Program.cs  XeryonEtherCAT.ConsoleHarness.csproj
XeryonEtherCAT.Core/: AxisCommand.cs  AxisConfiguration.cs  AxisStatus.cs  AxisStatusFlags.cs  AxisUnitConverter.cs  ConnectionState.cs  XeryonEtherCAT.Core.csproj
XeryonEtherCAT.Core.Tests/: UnitTest1.cs  XeryonEtherCAT.Core.Tests.csproj
XeryonEtherCAT.Core/Abstractions/: IEtherCatMaster.cs  IEthercatDriveService.cs
XeryonEtherCAT.Core/Extensions/: ServiceCollectionExtensions.cs
XeryonEtherCAT.Core/Internal/Simulation/: SimulatedEtherCatMaster.cs
XeryonEtherCAT.Core/Internal/Soem/: ISoemClient.cs  SimulatedSoemClient.cs  SoemClient.cs  SoemErrorCodes.cs  SoemEtherCatMaster.cs  SoemShim.cs  SoemShimNative.cs
XeryonEtherCAT.Core/Models/: AxisStatusChangedEventArgs.cs  AxisStatusFlags.cs  ConnectionState.cs  ConnectionStateChangedEventArgs.cs  DriveError.cs  DriveErrorCode.cs  DriveStateFormatter.cs  DriveStatus.cs  DriveStatusChangeEvent.cs  EtherCatSlaveInfo.cs  PendingCommand.cs  SoemFaultEvent.cs  SoemHealthSnapshot.cs  SoemStatusSnapshot.cs  XeryonAxis.cs  XeryonAxisCommand.cs  XeryonCommandFrame.cs  XeryonStatusFrame.cs
XeryonEtherCAT.Core/Options/: EthercatDriveOptions.cs  XeryonEtherCatOptions.cs
XeryonEtherCAT.Core/Services/: EthercatDriveService.cs  XeryonEtherCatService.cs
XeryonEtherCAT.Core/Utilities/: AsyncEventQueue.cs  TelemetrySync.cs
XeryonEtherCAT.Ethercat/: XeryonEtherCAT.Ethercat.csproj  XeryonEthercatService.cs
XeryonEtherCAT.Ethercat/Interfaces/: IXeryonEthercatService.cs
XeryonEtherCAT.Ethercat/Internal/: AxisContext.cs
XeryonEtherCAT.Ethercat/Models/: AxisStatusChangedEventArgs.cs  ConnectionStateChangedEventArgs.cs  EthercatInterfaceInfo.cs  XeryonEthercatOptions.cs
XeryonEtherCAT.Integrations.Grpc/: EthercatGrpcServerOptions.cs  EthercatGrpcService.cs  EthercatGrpcServiceHost.cs  XeryonEtherCAT.Integrations.Grpc.csproj
XeryonEtherCAT.Integrations.Grpc/Protos/: ethercat.proto
XeryonEtherCAT.Integrations.Mqtt/: EthercatMqttBridge.cs  EthercatMqttBridgeOptions.cs  MqttCommandPayload.cs  XeryonEtherCAT.Integrations.Mqtt.csproj
native/: building SOEM on windows.docx
native/SOEM-2.0.0/cmake/: soemConfig.cmake
native/soemshim/: CMakeLists.txt  rebuild.txt  soem_shim.c  soem_shim.h
native/soemshim-linux/: CMakeLists.txt  Dockerfile  README.md  soem_shim.c
(+1 files in other folders)
